--- a/DNS/example1.html
+++ b/DNS/example1.html
@@ -12,7 +12,7 @@
    </div>
    <script>
     $('p').addClass('colorful');
-    $('p:last').appendAfter('<h3>More headers for an odd reason</h3>');
+    $('.content').append('<h3>More headers for an odd reason</h3>');
    </script>
   </body>
 </html>
