--- a/DNS/example1b.html
+++ b/DNS/example1b.html
@@ -3,7 +3,7 @@
   <head>
     <title>Testing DNS Lookups</title>
     <link rel="stylesheet" type="text/css" href="http://geedew.github.io/examples/DNS/test.css">
-    <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+    <script src="http://geedew.github.io/examples/DNS/jquery-2.1.0.min.js"></script>
   </head>
   <body>
   <div class='content'>
