--- a/DNS/example1.html
+++ b/DNS/example1.html
@@ -3,6 +3,7 @@
   <head>
     <title>Testing DNS Lookups</title>
     <link rel="stylesheet" type="text/css" href="http://geedew.github.io/examples/DNS/test.css">
+    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/normalize/3.0.0/normalize.min.css">
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
   </head>
   <body>
